# mpl_dataset_toolbox

./: CMakeLists.txt  README.md  package.xml
config/: bag_merger.yaml  bag_splitter.yaml  event_stereo_visualizer.yaml  event_visualizer.yaml  message_topic.yaml
include/: utility.hpp
launch/: bag_merger.launch  bag_splitter.launch  data_validation.launch  event_stereo_visualization.launch  event_visualization.launch
script/: bag2hdf5.py
src/: bag2rawfile.cpp  bag_merger.cpp  bag_splitter.cpp  data_validation.cpp  data_validator.cpp  event_visualizer.cpp  timeline_reconstructor.cpp
